<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/it_home"
        android:icon="@drawable/ic_bottom_nav_home"
        android:title="@string/txt_bottom_nav_home" />

    <item
        android:id="@+id/it_hot_video"
        android:icon="@drawable/ic_bottom_nav_hot_video"
        android:title="@string/txt_bottom_nav_hot_video" />

    <item
        android:id="@+id/it_download"
        android:icon="@drawable/ic_bottom_nav_download"
        android:title="@string/txt_bottom_nav_downloads" />

    <item
        android:id="@+id/it_player"
        android:icon="@drawable/ic_bottom_nav_player"
        android:title="@string/txt_bottom_nav_player" />

</menu>