<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomfeedbackSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/txt_heading_like"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/txt_type" />

    <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
        android:id="@+id/tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        app:flexWrap="wrap"
        app:toggle_selectableAmount="4">

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:toggle_padding="@dimen/_5sdp"
            app:toggle_selectedBackgroundColor="@color/dark_green"
            app:toggle_text="@string/download_failed" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:toggle_padding="@dimen/_5sdp"
            app:toggle_selectedBackgroundColor="@color/dark_green"
            app:toggle_text="@string/txt_too_many_ads" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:toggle_padding="@dimen/_5sdp"
            app:toggle_selectedBackgroundColor="@color/dark_green"
            app:toggle_text="@string/txt_low_quality" />

        <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
            android:id="@+id/tag4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:toggle_padding="@dimen/_5sdp"
            app:toggle_selectedBackgroundColor="@color/dark_green"
            app:toggle_text="@string/txt_other" />

    </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_gray_dialog"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@null"
            android:gravity="top"
            android:lines="6"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp" />


        <LinearLayout
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/bg_dark_green_rounded"
            android:backgroundTint="@color/light_gray"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>