<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="0dp"
        android:text="@string/txt_download"
        android:theme="@style/TextSettingGreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_white_rounded"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp">

        <TextView
            android:id="@+id/tvDownloadLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_15sdp"
            android:theme="@style/TextSettingBlackTitle"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="0dp"
            android:text="@string/txt_download_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvVideoDownloadLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_5sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="0dp"
            android:text="@string/txt_video_download_location"
            android:theme="@style/TextSettingContent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDownloadLocation" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvVideoDownloadLocation">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_wifi" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/txt_download_with_wi_fi_only"
                android:theme="@style/TextSettingBlackTitle" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchDownloadWithWiFiOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/Color1SwitchStyle" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
