<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="0dp"
        android:text="@string/txt_general_settings"
        android:theme="@style/TextSettingGreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp">

        <LinearLayout
            android:id="@+id/btnLanguage"
            android:layout_width="match_parent"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_earth"
                app:tint="@color/icon_green" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_language_options"
                    android:theme="@style/TextSettingBlackTitle" />

            </LinearLayout>

        <TextView
            android:id="@+id/tvCurrentLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/icon_green"
            android:textStyle="bold"
            android:text="@string/txt_english"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSyncToGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelp">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_gallery" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sync_to_gallery"
                    android:theme="@style/TextSettingBlackTitle" />

                <TextView
                    android:id="@+id/tvSyncToGalleryStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_on"
                    android:theme="@style/TextSettingContent" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchSyncToGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:theme="@style/Color1SwitchStyle" />

        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
