<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="0dp"
        android:text="@string/txt_help"
        android:theme="@style/TextSettingGreenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:background="@drawable/bg_white_rounded"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp">

        <LinearLayout
            android:id="@+id/btnFeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:background="?selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_feedback" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_feedback"
                android:theme="@style/TextSettingBlackTitle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="?selectableItemBackground"
            android:paddingHorizontal="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_privacy_policy" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_privacy_policy"
                android:theme="@style/TextSettingBlackTitle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnShareWithFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="?selectableItemBackground"
            android:padding="@dimen/_5sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/txt_wifi"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/share_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_share_with_friends"
                android:theme="@style/TextSettingBlackTitle" />

        </LinearLayout>



    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>
